fixed size and spacing of homepage dates

--- a/css/main.css
+++ b/css/main.css
@@ -1705,6 +1705,11 @@ tbody.collapse.in {
     max-width: 100%
 }
 
+.notification-list li {
+    font-size: 15px;
+    margin: 1px 0;
+}
+
 .thumbnail {
     display: block;
     padding: 4px;
